--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             <a href="#faqs" class="scroll"><li>FAQs</li></a>
           </ul>
         </div>
-        <a class="mobile-link hidden-lg hidden-md">
+        <div class="mobile-link hidden-lg hidden-md">
           <span class="mobile-hamburger"></span>
-        </a>
+        </div
+        >
         <div class="navigation nav-right">
           <ul>
             <li>
@@ -67,6 +68,7 @@
 
               <div class="dc-hero--description">
                 <h4>May 20, 2017</h4>
+                <h4>9am - 5pm</h4>
                 <h4>UCSD Price Center Theater</h4>
               </div>
 
@@ -84,7 +86,9 @@
           <div class="dc-card--wrapper col-md-8 col-md-offset-2 dc-up">
             <div class="dc-card">
               <h2 class="dc-section--header">About</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>What is Design?
+Design is about the progress behind innovation and creativity.  It's not simply about aesthetics, but about human interactions and how to improve user experiences. Join us at our first UC San Diego Design Conference to learn about design in the professional world and what that entails. Come and listen to our inspirational keynote speakers and participate in workshops to grow your skills.
+</p>
             </div>
         </div>
       </div>
@@ -385,6 +389,7 @@
 
             <div class="dc-hero--description">
               <h4 class="text-white">May 20, 2017</h4>
+              <h4 class="text-white">9am - 5pm</h4>
               <h4 class="text-white">UCSD Price Center Theater</h4>
             </div>
 
@@ -426,7 +431,7 @@
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="js/nav.js"></script>
-  <script type="text/javascript" src="js/scroll.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
   <script>
     var YOUR_GA_CODE = 'UA-84330975-1';
 
