Fixed mobile nav

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
             <a href="#faqs" class="scroll"><li>FAQs</li></a>
           </ul>
         </div>
-        <div class="mobile-link hidden-lg hidden-md">
-          <span class="mobile-hamburger"></span>
-        </div
-        >
+        <div class="menu-button">
+          <a class="mobile-link hidden-lg hidden-md">
+            <span class="mobile-hamburger"></span>
+          </a>
+        </div>
         <div class="navigation nav-right">
           <ul>
             <li>
@@ -118,9 +119,9 @@ Design is about the progress behind innovation and creativity.  It's not simply 
             <div class="dc-card dc-card--min">
               <img class="dc-card--img" src="images/neema.jpg" />
               <div class="dc-card--body card-body">
-                <h3>Neema Mandavi</h3>
+                <h3>Neema Mahdavi</h3>
                 <br>
-                <p>Panelist, Workshop Leader</p>
+                <p>Panelist</p>
                 <br>
                 <p>Product Designer, Workday</p>
               </div>
@@ -133,7 +134,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
               <div class="dc-card--body card-body">
                 <h3>Nastasha Tan</h3>
                 <br>
-                <p>Panelist, Workshop Leader</p>
+                <p>Panelist</p>
                 <br>
                 <p>Design Lead, Ideo</p>
               </div>
@@ -325,6 +326,8 @@ Design is about the progress behind innovation and creativity.  It's not simply 
         <div class="row text-center dc-section--button">
           <a class="dc-btn btn btn-primary" href="images/sponsorship.pdf" target="_blank">View Sponsorship Tiers</a>
         </div>
+        <br>
+        <p class="text-center">For sponsorship inquiries, <a class="mail-link" href="mailto:designatucsd@gmail.com">E-mail Us</a></p>
       </div>
     </div>
 
@@ -338,6 +341,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
         </div>
 
         <div class="row dc-faq--table">
+          <div class="row">
           <div class="col-sm-6 dc-faq--section">
             <h4>Who can attend?</h4>
             <div class="dc-faq--text">
@@ -350,6 +354,8 @@ Design is about the progress behind innovation and creativity.  It's not simply 
               <p>Parking in A,B,S & V spots on campus are free on the weekends. We suggest parking in Gilman Parking Structure.</p>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-sm-6 dc-faq--section">
             <h4>What do I need to bring?</h4>
             <div class="dc-faq--text">
@@ -362,6 +368,8 @@ Design is about the progress behind innovation and creativity.  It's not simply 
               <p>The UC San Diego Design Conference is free of charge for all attendees!</p>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-sm-6 dc-faq--section">
             <h4>Will food be provided?</h4>
             <div class="dc-faq--text">
@@ -374,7 +382,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
               <p>The conference will be help in Price Center Theater. Registration will begin at 9am and the event will end at 5pm.</p>
             </div>
           </div>
-
+        </div>
         </div>
       </div>
     </div>
@@ -393,17 +401,16 @@ Design is about the progress behind innovation and creativity.  It's not simply 
               <h4 class="text-white">UCSD Price Center Theater</h4>
             </div>
 
-            <a class="btn btn-primary dc-btn" href="https://ucsddesignconf.eventbrite.com" target="_blank">Register Now</a>
+            <a class="btn btn-primary dc-btn dc-btn--footer" href="https://ucsddesignconf.eventbrite.com" target="_blank">Register Now</a>
           </div>
     </div>
 
     <div class="dc-section dc-section--footer dc-section--no-after">
       <footer class="footer dc-footer">
         <div class="dc-footer--presented text-left dc-mobile-text-center container">
-          <div class="col-md-6">
-            <div class="row">
+          <div class="row">
+          <div class="col-sm-6">
               <h4 class="text-white">Presented by:</h4>
-            </div>
             <div class="row dc-footer--images text-left dc-mobile-text-center">
               <a id="logo-designatucsd-link" href="http://designatucsd.org" target="_blank">
                 <img id="logo-designatucsd" src="images/designatucsd_logo_white.png" />
@@ -413,8 +420,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
               </a>
             </div>
           </div>
-          <div class="col-md-6 text-right">
-
+          <div class="col-sm-6 text-right">
             <ul class="dc-footer--icons dc-mobile-text-center">
               <li><a href="https://www.facebook.com/designatucsd" target="_blank"><i class="fa fa-facebook text-white"></i></a></li>
               <li><a href="https://www.instagram.com/designatucsd/" target="_blank"><i class="fa fa-instagram text-white"></i></a></li>
@@ -423,6 +429,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
           </ul>
           </div>
         </div>
+        </div>
       </footer>
     </div>
   </div>
@@ -430,7 +437,6 @@ Design is about the progress behind innovation and creativity.  It's not simply 
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
-  <script type="text/javascript" src="js/nav.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
   <script>
     var YOUR_GA_CODE = 'UA-84330975-1';
