--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="UCSD Design Conference">
-  <meta property="og:description" content="UC San Diego Design Conference. May 20, 2017. Price Center Theater">
+  <meta property="og:description" content="UC San Diego Design Conference. May 20, 2017. Price Center Theater.">
   <meta property="og:image" content="images/featurette.png">
   <meta property="og:image:secure_url" content="images/featurette.png">
   <meta property="og:image:type" content="image/png"><title>Design Conference</title>
