--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
 
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card dc-card--min">
-              <img class="dc-card--img" src="images/temporary.png" />
+              <img class="dc-card--img" src="images/engage.png" />
               <div class="dc-card--body card-body">
                 <h3>Engage</h3>
                 <p>Interact with passionate students eager to learn more about design and how it plays a role in your company</p>
