Hehehehe vincent was here

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="dc-card--wrapper col-md-8 col-md-offset-2 dc-up">
             <div class="dc-card">
               <h2 class="dc-section--header">About</h2>
-              <p>What is Design?
+              <p>What is design?
 Design is about the progress behind innovation and creativity.  It's not simply about aesthetics, but about human interactions and how to improve user experiences. Join us at our first UC San Diego Design Conference to learn about design in the professional world and what that entails. Come and listen to our inspirational keynote speakers and participate in workshops to grow your skills.
 </p>
             </div>
