--- a/index.html
+++ b/index.html
@@ -422,9 +422,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
           </div>
           <div class="col-sm-6 text-right">
             <ul class="dc-footer--icons dc-mobile-text-center">
-              <li><a href="https://www.facebook.com/designatucsd" target="_blank"><i class="fa fa-facebook text-white"></i></a></li>
-              <li><a href="https://www.instagram.com/designatucsd/" target="_blank"><i class="fa fa-instagram text-white"></i></a></li>
-              <li><a href="https://www.linkedin.com/company-beta/17891459" target="_blank"><i class="fa fa-linkedin text-white"></i></a></li>
+              <li><a href="https://www.facebook.com/events/1361764973939795/" target="_blank"><i class="fa fa-facebook text-white"></i></a></li>
               <li><a href="mailto:designatucsd@gmail.com"><i class="fa fa-envelope text-white"></i></a></li>
           </ul>
           </div>
