changed Neema's title

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
                 <br>
                 <p>Panelist</p>
                 <br>
-                <p>Product Designer, Workday</p>
+                <p>Design Operations, Workday</p>
               </div>
             </div>
           </div>
