--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
           <div class="col-sm-6 dc-faq--section">
             <h4>Where and when is the conference?</h4>
             <div class="dc-faq--text">
-              <p>The conference will be help in Price Center Theater. Registration will begin at 9am and the event will end at 5pm.</p>
+              <p>The conference will be held in Price Center Theater. Registration will begin at 9am and the event will end at 5pm.</p>
             </div>
           </div>
         </div>
