--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="dc-card">
               <h2 class="dc-section--header">About</h2>
               <p>What is design?
-Design is about the progress behind innovation and creativity.  It's not simply about aesthetics, but about human interactions and how to improve user experiences. Join us at our first UC San Diego Design Conference to learn about design in the professional world and what that entails. Come and listen to our inspirational keynote speakers and participate in workshops to grow your skills.
+Design is about the progress behind innovation and creativity.  It's not simply about aesthetics, but about human interactions and how to improve user experiences. Join us at our first UC San Diego Design Conference to learn about design in the professional world and what that entails. Come and listen to our inspirational keynote speakers and participate in breakout sessions to grow your skills.
 </p>
             </div>
         </div>
@@ -145,7 +145,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
             <div class="dc-card dc-card--min">
               <img class="dc-card--img" src="images/sharon.jpg" />
               <div class="dc-card--body card-body">
-                <h3>Sharon Charmichael</h3>
+                <h3>Sharon Carmichael</h3>
                 <br>
                 <p>Panelist</p>
                 <br>
@@ -233,7 +233,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
             <h4>1:00 PM</h4>
           </div>
           <div class="col-sm-8">
-            <h4>Workshop Session 1</h4>
+            <h4>Breakout Session 1</h4>
             <p>Various Locations</p>
           </div>
         </div>
@@ -242,7 +242,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
             <h4>2:00 PM</h4>
           </div>
           <div class="col-sm-8">
-            <h4>Workshop Session 2</h4>
+            <h4>Breakout Session 2</h4>
             <p>Various Locations</p>
           </div>
         </div>
