--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#about" class="scroll"><li>About</li></a>
             <a href="#speakers" class="scroll"><li>Speakers</li></a>
             <a href="#schedule" class="scroll"><li>Schedule</li></a>
-            <a href="#sponsors" class="scroll"><li>Sponsors</li></a>
+            <a href="#breakout-1" class="scroll"><li>Breakout Sessions</li></a>
             <a href="#faqs" class="scroll"><li>FAQs</li></a>
           </ul>
         </div>
@@ -273,64 +273,186 @@ Design is about the progress behind innovation and creativity.  It's not simply 
   </div>
 </div>
 
-    <div id="sponsors" class="section dc-section dc-section--white dc-sponsors">
+
+<div id="breakout-1" class="section dc-section dc-breakout">
+  <div class="container">
+    <div class="row text-center">
+      <h2 class="dc-section--header">Breakout Session 1</h2>
+    </div>
+
+    <div class="row">
       <div class="container">
-        <div class="row text-center">
-          <h2 class="dc-section--header">Sponsors</h2>
-        </div>
+        <div class="dc-card--wrapper col-md-10 col-md-offset-1">
+          <div class="dc-card">
+            <div class="col-xs-offset-1">
+              <h2>Designing <br>the Design Process</h2>
+            </div>
 
-        <div class="row dc-sponsors--logos text-center">
-          <div class="col-md-3 col-md-offset-3">
-            <img class="logo" src="images/rady_logo.png" />
-          </div>
-          <div class="col-md-3">
-            <img class="logo" src="images/designlab_logo.png" />
-          </div>
-        </div>
+            <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
 
-        <div class="row text-center">
-
-          <div class="dc-card--wrapper col-md-4">
-            <div class="dc-card dc-card--min">
-              <img class="dc-card--img" src="images/engage.png" />
-              <div class="dc-card--body card-body">
-                <h3>Engage</h3>
-                <p>Interact with passionate students eager to learn more about design and how it plays a role in your company</p>
+            <div class="row">
+              <div class="col-xs-offset-1 col-xs-10 session">
+                <div class="bottom">
+                  <p>Price Center Theater</p>
+                </div>
+                <div class="text-right">
+                  <p>Neema Mahdavi</p>
+                  <p>Design Operations, Workday</p>
+                </div>
               </div>
             </div>
           </div>
-
-          <div class="dc-card--wrapper col-md-4">
-            <div class="dc-card dc-card--min">
-              <img class="dc-card--img" src="images/network.png" />
-              <div class="dc-card--body card-body">
-                <h3>Network</h3>
-                <p>Meet the next generation of designers and business students eager for opportunities you have to offer</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="dc-card--wrapper col-md-4">
-            <div class="dc-card dc-card--min">
-              <img class="dc-card--img" src="images/teach.png" />
-              <div class="dc-card--body card-body">
-                <h3>Teach</h3>
-                <p>Lead a hands-on workshop session revolving around your company's product or design process</p>
-              </div>
-            </div>
-          </div>
-
-
         </div>
-
-        <div class="row text-center dc-section--button">
-          <a class="dc-btn btn btn-primary" href="images/sponsorship.pdf" target="_blank">View Sponsorship Tiers</a>
-        </div>
-        <br>
-        <p class="text-center">For sponsorship inquiries, <a class="mail-link" href="mailto:designatucsd@gmail.com">E-mail Us</a></p>
       </div>
     </div>
 
+    <div class="row">
+      <div class="container">
+        <div class="dc-card--wrapper col-md-10 col-md-offset-1">
+          <div class="dc-card">
+            <div class="col-xs-offset-1">
+              <h2>Why UX Research <br>Matters</h2>
+            </div>
+
+            <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
+
+            <div class="row">
+              <div class="col-xs-offset-1 col-xs-10 session">
+                <div class="bottom">
+                  <p>Bear Room</p>
+                </div>
+                <div class="text-right">
+                  <p>Hue Tran</p>
+                  <p>User Experience Analyst, Education First</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="container">
+        <div class="dc-card--wrapper col-md-10 col-md-offset-1">
+          <div class="dc-card">
+            <div class="col-xs-offset-1">
+              <h2>Creating an Effective <br>Design Portfolio</h2>
+            </div>
+
+            <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
+
+            <div class="row">
+              <div class="col-xs-offset-1 col-xs-10 session">
+                <div class="bottom">
+                  <p>Red Shoe Room</p>
+                </div>
+                <div class="text-right">
+                  <p>Sharon Carmichael</p>
+                  <p>Sr. Interaction Design Manager, Intuit</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div id="breakout-2" class="section dc-section dc-breakout">
+  <div class="container">
+    <div class="row text-center">
+      <h2 class="dc-section--header">Breakout Session 2</h2>
+    </div>
+
+    <div class="row">
+      <div class="container">
+        <div class="dc-card--wrapper col-md-10 col-md-offset-1">
+          <div class="dc-card">
+            <div class="col-xs-offset-1">
+              <h2>Human Centered Design <br>at IDEO</h2>
+            </div>
+
+            <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
+
+            <div class="row">
+              <div class="col-xs-offset-1 col-xs-10 session">
+                <div class="bottom">
+                  <p>Price Center Theater</p>
+                </div>
+                <div class="text-right">
+                  <p>Nastasha Tan</p>
+                  <p>Design Lead, Interaction Design, IDEO</p>
+                  <br>
+                  <p>Vinh Pho</p>
+                  <p>Design Lead, Industrial Design, IDEO</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="container">
+        <div class="dc-card--wrapper col-md-10 col-md-offset-1">
+          <div class="dc-card">
+            <div class="col-xs-offset-1">
+              <h2>3 Ways to Incorporate Your Users <br>Into Your Design Process</h2>
+            </div>
+
+            <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
+
+            <div class="row">
+              <div class="col-xs-offset-1 col-xs-10 session">
+                <div class="bottom">
+                  <p>Bear Room</p>
+                </div>
+                <div class="text-right">
+                  <p>Manuel Rapada</p>
+                  <p>UX Researcher & Customer Advocate, Adobe</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="container">
+        <div class="dc-card--wrapper col-md-10 col-md-offset-1">
+          <div class="dc-card">
+            <div class="col-xs-offset-1">
+              <h2>Visual Design <br>101</h2>
+            </div>
+
+            <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
+
+            <div class="row">
+              <div class="col-xs-offset-1 col-xs-10 session">
+                <div class="bottom">
+                  <p>Red Shoe Room</p>
+                </div>
+                <div class="text-right">
+                  <p>Caitlin Cagampan</p>
+                  <p>Experience Designer, Mitchell International</p>
+                  <br>
+                  <p>Stephanie Liang</p>
+                  <p>User Experience Designer, Assurance</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
 
     <div id="faqs" class="section dc-section dc-faq">
       <div class="container">
