--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
         <div class="dc-card--wrapper col-md-10 col-md-offset-1">
           <div class="dc-card">
             <div class="col-xs-offset-1">
-              <h2>Designing <br>the Design Process</h2>
+              <h2>Designing the Design Process</h2>
             </div>
 
             <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
@@ -311,7 +311,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
         <div class="dc-card--wrapper col-md-10 col-md-offset-1">
           <div class="dc-card">
             <div class="col-xs-offset-1">
-              <h2>Why UX Research <br>Matters</h2>
+              <h2>Why UX Research Matters</h2>
             </div>
 
             <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
@@ -337,7 +337,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
         <div class="dc-card--wrapper col-md-10 col-md-offset-1">
           <div class="dc-card">
             <div class="col-xs-offset-1">
-              <h2>Creating an Effective <br>Design Portfolio</h2>
+              <h2>Creating an Effective Design Portfolio</h2>
             </div>
 
             <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
@@ -372,7 +372,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
         <div class="dc-card--wrapper col-md-10 col-md-offset-1">
           <div class="dc-card">
             <div class="col-xs-offset-1">
-              <h2>Human Centered Design <br>at IDEO</h2>
+              <h2>Human Centered Design at IDEO</h2>
             </div>
 
             <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
@@ -401,7 +401,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
         <div class="dc-card--wrapper col-md-10 col-md-offset-1">
           <div class="dc-card">
             <div class="col-xs-offset-1">
-              <h2>3 Ways to Incorporate Your Users <br>Into Your Design Process</h2>
+              <h2>3 Ways to Incorporate Your Users Into Your Design Process</h2>
             </div>
 
             <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
@@ -427,7 +427,7 @@ Design is about the progress behind innovation and creativity.  It's not simply 
         <div class="dc-card--wrapper col-md-10 col-md-offset-1">
           <div class="dc-card">
             <div class="col-xs-offset-1">
-              <h2>Visual Design <br>101</h2>
+              <h2>Visual Design 101</h2>
             </div>
 
             <div class="col-xs-offset-1 col-xs-1 dc-divider"></div>
